// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#CheckBoxField() it should display validation errors 1`] = `
<form
  name="myForm"
  onSubmit={[Function]}
  state={
    Object {
      "terms": false,
    }
  }
>
  <div
    className="form-group form-check"
  >
    <input
      checked={false}
      className="form-check-input "
      name="terms"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</form>
`;

exports[`#CheckBoxField() should render a single input tag with no bootstrap styles 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "terms": false,
    }
  }
>
  <div
    className="form-group form-check"
  >
    <input
      checked={false}
      className="form-check-input "
      name="username"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</form>
`;

exports[`#CheckBoxField() should render an input field with the bootstrap styled tags 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "terms": false,
    }
  }
>
  <div
    className="form-group form-check"
  >
    <input
      checked={false}
      className="form-check-input "
      name="username"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</form>
`;
